# swaptube

./: .gitattributes  .gitignore  1  CMakeLists.txt  README.md  README.txt  To-Do List  build_and_run.sh  collabs.md  externs.txt  flake.nix  go.sh  hipifyCUDA.sh  movecache.txt  play.sh  record_audios.py  record_audios.sh  test.sh  tmux.sh  upload.sh
.github/workflows/: smoketests.yml
cmake/: FindGLib.cmake
config/: Combinatoric Wins.json  Parity.json  test_composite.json  test_latex.json  test_mandelbrot.json
docker/: Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-render.sh
in/: Claimeven.json  Combinatoric Wins.json  Parity.json  Threatpairs.json  Ugly_Latex.json  WinConditions.json  WinConditionsScript  japanese.json  mandeljulia.json  test_composite.json  test_header.json  test_latex.json  test_mandelbrot.json
sfx/: A  C  E  sawtooth  sawtooth_phase
src/: Animator.cpp  Claimeven.cpp  README.md  main.cpp  mid_refactor.cpp
src/CUDA/: 3d_points_lines.cu  ComplexArbitraryFunction.cu  ComplexPolynomial.cu  Convolution.cu  GraphSpread.cu  PendulumFractal.cu  SelfCheck.cu  SurfaceRenderer.cu  background_color.cu  beaver_grid.cu  beaver_grid_TNF.cu  beaver_grid_TNF_3d.cu  calculator.cuh  color.cuh  color_field.refactor  common_graphics.cuh  complex_arbitrary_function.cu  complex_functions.cuh  complex_polynomial.cu  convolution.cu  conway.cu  conway.cu.incomplete  coordinate_grid.cu  cuda_color.cu  cuda_graphics.cu  cuda_main.cu  deepcopy_manifold.cuh  edge_detect.cuh  encoder_preprocessing.cu  find_roots.cuh  four_d_algebra.cu  four_d_plane.cu  four_d_shared.cuh  four_d_verse.cu  fractal_sdf.cuh  geodesic_raymarch.cu  graph_spread.cu  gravitational_predictions.cu  gravity_basins.cu  gravity_basins.cu_needs_refactor  (+25 more)
src/CUDA/Beavers/: beaver_TNF_3d.cu  beaver_grid.cu  (+3 more)
src/Core/: Color.cpp  Color.h  Convolution.cpp  Convolution.h  Macroblock.cpp  Macroblock.h  Main.cpp  Pixels.cpp  Pixels.h  ResolvedStateEquationComponent.c  Smoketest.cpp  Smoketest.h  StateManager.cpp  StateOperators.c  Timer.cpp  Timer.h  UnresolvedStateEquationComponent.cpp  pixels.h
src/DataObjects/: BouncingBalls.cpp  BouncingBalls.h  Conway.cpp  ConwayGrid.cpp  ConwayGrid.h  DataObject.cpp  DataObject.h  DevicePointer.cpp  DevicePointer.h  GenericBoard.cpp  GenericBoard.h  GeometricConstruction.cpp  GeometricConstruction.h  Graph.cpp  Graph.h  GraphDrawingConfig.cpp  GraphDrawingConfig.h  GraphExport.h  HashableString.cpp  HashableString.h  KlotskiBoard.cpp  KlotskiBoard.h  LambdaCalculus.cpp  LambdaExpression.cpp  LambdaString.cpp  LambdaUnitTest.cpp  OrbitSim.cpp  OrbitSim.cpp_needs_refactor  PacmanPackage.cpp  Pendulum.cpp  Pendulum.h  PendulumHelpers.cpp  Rubiks  Rubiks.cpp  Rubiks.h
src/Host_Device_Shared/: Color.h  Interpolation.h  ManifoldData.c  ManifoldData.h  PendulumHelpers.cpp  PendulumHelpers.h  README.md  ThreeDimensionStructs.h  TuringMachine.h  calculator.cuh  find_roots.c  helpers.h  rubiks_config.h  shared_precompiler_directives.c  shared_precompiler_directives.h  vec.h
src/IO/: AudioWriter.cpp  AudioWriter.h  DebugPlot.h  IoHelpers.cpp  IoHelpers.h  LivePlayer.cpp  LivePlayer.h  PNG.cpp  PNG.h  SFX.cpp  SFX.cpp_needs_refactor  SFX.h  SVG.cpp  SVG.h  ScalingParams.h  ShtookaWriter.cpp  ShtookaWriter.h  SubtitleWriter.cpp  SubtitleWriter.h  VideoDecoding.cpp  VideoDecoding.h  VideoWriter.cpp  VideoWriter.h  VisualMedia.cpp  VisualMedia.h  Writer.cpp  Writer.h  video_decoding.cpp
src/Projects/: AStar.cpp  AStarHeights.cpp  ArchDeps.cpp  BadContractions.cpp  BeaverVid.cpp  BuildGraph.cpp  BuildGraph.cpp_disabled  C4.cpp  C4Mods.cpp  C4_Collapse.cpp  C4_Manual_Tree.cpp  C4_Simple_Weak.cpp  C4_Test.cpp  ChannelBanner.cpp  ChannelShoutout.cpp  Commutators.cpp  ComplexFunctions.cpp  ContractionHierarchies.cpp  Conway.cpp  DoublePendulum.cpp  DrawSteadyState.cpp  Gabe.cpp  GraphAlgs.cpp  GraphAlgs_common.cpp  IslandsOfStability.cpp  Klotski.cpp  Klotski.cpp.old  KlotskiThumbnail.cpp  LambdaDemo.cpp  LargeDijkstra.cpp  LatexDemo.cpp  LoopAnimationSceneTest.cpp  Mandelbrot3d.cpp  MandelbrotPhotos.cpp  MathClubIntro.cpp  MusicTest.cpp  NetherlandsBFS.cpp  NetherlandsDijkstra.cpp  NetherlandsRails.cpp  Orbits.cpp  (+18 more)
src/ROCm/: rocm_hip_main.cc  test_rocm.hip
src/Scenes/: KlotskiScene.cpp  MusicScene.cpp  Scene.cpp  Scene.h
src/audio_video/: AudioSegment.cpp  DebugPlot.h  audio.cpp  subs.cpp  video.cpp  writer.cpp
src/examples/: 3d_quaternion_rotation.cpp  3d_surface.cpp  C4Graph.cpp  C4_Manual_Tree.cpp  Solutions.cpp
src/frames/: C4Frame.cpp  Frame.cpp
src/io/: AudioSegment.cpp  AudioWriter.cpp  DebugPlot.h  GUI.cpp  IoHelpers.cpp  Macroblock.cpp  PathManager.cpp  SFX.cpp  ShtookaWriter.cpp  SubtitleWriter.cpp  VideoWriter.cpp  VisualMedia.cpp  Writer.cpp  audio.cpp  ffmpeg_error.hpp  sound_generation.cpp  subs.cpp  video.cpp  video_decoding.cpp  visual_media.cpp  writer.cpp
src/misc/: ColorScheme.cpp  Convolution.cpp  Dagger.cpp  GetFreeMemory.h  Main.cpp  README.md  StateManager.cpp  Timer.cpp  audio.cpp  calculator.cpp  calculator.h  color.cpp  convolution_tests.cpp  convolver.cpp  cuda_color.cu  dagger.cpp  inlines.h  pixels.h  visual_media.cpp  writer.cpp
src/projects/: .Solutions.cpp.swp  .active_project.cpp  3d_surface.cpp  C4Graph.cpp  C4_Manual_Tree.cpp  C4_Simple_Weak.cpp  ComplexFunction.cpp  GravityFractals.cpp  LambdaDemo.cpp  LatexDemo.cpp  Orbits.cpp  OrbitsColorSchemeTest.cpp  Project.cpp  SelfTest.cpp  Solutions.cpp  SteadyStates.cpp  claimeven.cpp
src/scenes/: .latex_scene.cpp.swp  3d_scene.cpp  C4Board.cpp  C4Board.h  Graph.cpp  JsonC4Cache.cpp  Scene.cpp  SteadyState.cpp  c4_graph_scene.cpp  c4_scene.cpp  calculator.cpp  complex_plot_scene.cpp  composite_scene.cpp  dagger.cpp  exposed_pixels_scene.cpp  graph_scene.cpp  header_scene.cpp  latex_scene.cpp  latex_scene_save.cpp  mandelbrot_scene.cpp  mouse_scene.cpp  png_scene.cpp  scene.cpp  scene.h  sequential_scene.cpp  twoswap_scene.cpp  variable_scene.cpp
src/sfx/: bowl.fft  fourier_analysis.cpp  overtone_analysis.cpp  recip.fft
src/videos/: claimeven.cpp
tools/: trimaudio.sh
(+337 files in other folders)
